--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             <a href="#home">
                 <li class="home">Home</li>
             </a>
-            <a href="https://wa.me/7981937439">
+            <a href="https://wa.me/=917981937439">
                 <li class="contact">Contact</li>
             </a>
             <a href="#footer">
@@ -318,7 +318,7 @@
     <div class="footer2">
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-        <a href="https://wa.me/7981937439" id="whatsapp_float" target="_blank" rel="noopener noreferrer">
+        <a href="https://wa.me/+917981937439" id="whatsapp_float" target="_blank" rel="noopener noreferrer">
             <i class="fa fa-whatsapp whatsapp-icon"></i>
         </a>
 
