--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
             justify-content: center;
             align-items: center;
         }
+     html{
+     scroll-behavior: smooth;
+
+  }
 
 
 
